# log-anomaly

./: README.md  pyproject.toml  requirements.txt
src/logdetector/: __init__.py  __main__.py  alerts.py  analyzer.py  detectors.py  parsers.py  patterns.py  reporters.py  utils.py
tests/: __init__.py  test_detectors.py  test_parsers.py
